# BearlibGame

./: .gitmodules  README.md
bearlibTest/: -lBearLibTerminal  Cargo.toml  xptest
bearlibTest/src/: main.rs  main1.rs  mainGame.rs  mainMap.rs
bearlibTest/src/actions/: mod.rs
bearlibTest/src/anatomy/: layermap.rs  mod.rs
bearlibTest/src/materials/: inorganic_metal.txt  mod.rs
bearlibTest/src/pathing/: mod.rs  supercover.rs
bearlibTest/src/physics/: mod.rs
bearlibTest/src/rules/: mod.rs
bearlibTest/src/xploader/: mod.rs
bearlibtest/src/: .main.rs.swp
