[package]
authors = ["davjones0"]
name = "bearlibTest"
version = "0.1.0"
[dependencies]
bear-lib-terminal = { path= "./BearLibTerminal.rs"}
priority-queue = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
num-traits = "*"
hex = "*"
flate2 = { version = "1.0.1", features = ["zlib"], default-features = false }
byteorder = "*"